--- a/pre.Rmd
+++ b/pre.Rmd
@@ -12,7 +12,7 @@ output: slidy_presentation
 $y$: observation. $x$: the "truth". $A$: forward transform.
 
 $$
-\hat x =\min_x\|y-Ax\|_2^2-\tau\|x\|_{TV}.
+\hat x =\arg \min_x\|y-Ax\|_2^2-\tau\|x\|_{TV}.
 $$
 
 Solve by proximal gradient method:
@@ -26,7 +26,15 @@ $$
 x^{(k+1)}=\arg\min_x \frac12\|x-\tilde x\|_2^2+t_k\tau\|x\|_{TV}.
 $$
 
-- Plug-and-play
+- Motivation
+
+    + Generalize those two terms
+
+    + Use ADMM instead of proximal gradient method
+
+    + Plug-and-play: apply *(any)* denoising algorithm
+
+
 
 ## Algorithm
 
@@ -53,8 +61,8 @@ $$
 Solve
 $$
 \begin{aligned}
-(\hat x,\hat v)=&\arg\min_{x,v}\{l(y;x)+\beta\cdot s(v)\},\\
-&s.t.x=v.
+(\hat x,\hat v)=~&\arg\max_{x,v}\{l(y;x)+\beta\cdot s(v)\},\\
+&s.t.~x=v.
 \end{aligned}
 $$
 
