--- a/pre.Rmd
+++ b/pre.Rmd
@@ -125,9 +125,17 @@ $$
 
 ## Related work
 
+- Why ADMM
+
+    + http://www.stronglyconvex.com/blog/admm-to-prox-grad.html
+
 - Convergence
 
     + Chan, Stanley H., Xiran Wang, and Omar A. Elgendy. "Plug-and-play ADMM for image restoration: Fixed-point convergence and applications." IEEE Transactions on Computational Imaging 3, no. 1 (2017): 84-98.
+
+- Extension
+
+    + Zhang, Kai, Wangmeng Zuo, and Lei Zhang. "Deep Plug-and-Play Super-Resolution for Arbitrary Blur Kernels." arXiv preprint arXiv:1903.12529 (2019).
 
 ## Experimental Results
 
